# xoe-novai-foundation

./: .dockerignore  .editorconfig  .env  .env.example  .env.library_apis  .geminiignore  .gitignore  .opencodeignore  .pre-commit-config.yaml  ADDITIONAL-RESEARCH-NEEDED.md  AGENTS.md  ANTIGRAVITY-BENCHMARK-INDEX.md  AUDIT_EXECUTIVE_SUMMARY.md  CHANGELOG.md  CLEANUP_ACTION_CHECKLIST.md  CLINE_DISPATCH_MODEL_PREFERENCE_TEST_REPORT.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_SOLUTION_SUMMARY.md  COMPREHENSIVE_SYSTEM_AUDIT_REPORT.md  CONTRIBUTING.md  Caddyfile  DISCOVERY_INDEX.md  Dockerfile  Dockerfile.awq  Dockerfile.base  Dockerfile.chainlit  Dockerfile.crawl  Dockerfile.curation_worker  Dockerfile.docs  GEMINI_ACCESS_SUMMARY.md  GROK_CONTEXT_PACK_v1.5.0.md  HYBRID-IA-DESIGN.md  IA-BEST-PRACTICES-SYNTHESIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEMORY_BANK_FALLBACK_INTEGRATION.md  MINIMAX_HANDOFF.md  Makefile  OPENCODE_RESEARCH_INDEX.md  OPUS_4_6_AUDIT_HANDOFF.md  (+86 more)
.build_cache/: wheelhouse.sha256
.cli/: SESS-17-SYNCHRONIZATION-MANIFEST.md  SESS-18-SYNCHRONIZATION-MANIFEST.md  SESS-20-SYNCHRONIZATION-MANIFEST.md
.clinerules/: 00-core-context.md  00-stack-overview.md  01-security.md  02-memory-bank.md  02-tech-stack.md  03-coding-standards.md  03-workflow.md  04-documentation.md  04-general-coding.md  05-dependencies.md  05-mkdocs.md  06-agents-coordination.md  06-dependency-management.md  10-spec-listener.md  13-thought-recording.md  14-coding-expert-persona.md  99-memory-bank-protocol.md  RULE-METRICS.md
.gemini/: GEMINI.md  settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  copilot-instructions.md.md  copilot-review-protocol.md  dependabot.yml  labeler.yml
.logs/: gnostic_audit.json  omega_observer.jsonl
.opencode/: RULES.md  opencode.json
.pip_cache/: requirements.txt
PHASES/: PHASE-2-COMPLETION-2026-02-22.md
XNAi_rag_app/: __init__.py  chainlit_app_voice.py  ingest_library.py  voice_degradation.py  voice_interface.py
_archive/: ARCHIVE-INDEX.md  GROK_CONTEXT_PACK_v1.5.0_20260204_173107.md  activeContext.md.backup.20260204_195537  deletion-log.md  sovereign-synergy-expert-v1.0.0.md.backup.20260204_195537  teamProtocols.md.backup.20260204_195537
_meta/: BUILD-SYSTEM-AUDIT-REPORT.md  CLAUDE-SONNET-RESEARCH-REQUEST-PHASE-5-7.md  EXECUTIVE-SUMMARY-2026-02-11.md  GENEALOGY-TRACKER.yaml  GENEALOGY.md  GITHUB_STRATEGY_V2.md  GIT_STRATEGY.md  GPT4_IMPLEMENTATION_ROADMAP.md  INDEX.md  MULTI_CLI_QUICK_START.md  MULTI_CLI_RESTORATION_INFRASTRUCTURE.md  SESS-23-BOOTSTRAP-LOG.md  SYSTEM-HARDENING-GNOSIS.md  SYSTEM_HARDENING_GNOSIS.md  XOE-NOVAI-RESEARCH-REPORT-2026-02-11.md  active_sources_canon_v1.md  comprehensive-documentation-audit-and-consolidation-strategy-v1.0.0.md  docs-audit-report-v1.0.0.md  grok-mc-source-hygiene-cleanup-v1.0.0.md  grok_diplomacy_v1.md  intro_to_grok.md  project_files_strategy_v2.md  projects.md  systematic-error-code-audit-20260211.md
app/: GEMINI.md  JEM_SOUL.md  __init__.py  config.py  config.toml  library_api_integrations.py  logging_config.py  metrics.py  oikos_service.py
artifacts/: AGENT_BUS_BOOTSTRAP.py  AMR_HANDOVER_PACK_SESS27.md  AMR_STRATEGY_ROADMAP.md  ARCHETYPE_LIBRARY.md  ARCHON_TO_HAIKU_GNOSIS_PACK.md  AUDIT_TRAIL_SYSTEM.md  BRANDING_INITIATION.md  COPILOT_SYNC_MANIFEST_SESS25.md  CRITICAL_SYSTEMS_AUDIT.md  Cline_Kat_Coder_Gemini_General_Handover.md  GEM-AWAKENING-SESS-16.md  GEMINI_FACET_6_SESSION_MANAGEMENT_GUIDE.md  GEMINI_FACET_6_SESSION_SUMMARY.md  GNOSTIC_AXIOMS.md  GNOSTIC_Axioms.md  GNOSTIC_LEXICON.md  GROK_MC_ONBOARDING.md  JOB_OC1_SUMMARY.yaml  SCHOLAR_HANDOFF_MANIFEST.md  SESS27_HANDOVER_RECOVERY.md  SESS27_STRATEGIC_SEED.md  SESSION_ARTIFACTS_DETAIL.md  SESSION_ARTIFACTS_INDEX.md  SONNET_UPDATE_SESS27.md  SYSTEM_INFRASTRUCTURE_CONTEXT.md  analyst-context-manifest.md  omega-context-pack.md
benchmarks/: ANTIGRAVITY-LATENCY-REPORT.md  BENCHMARK-DESIGN.md  COGNITIVE-ENHANCEMENTS.md  README.md  ground-truth-baseline.yaml  test-battery.md  (+1 more)
mcp-servers/memory-bank-mcp/: memory_bank_fallback.py  memory_bank_store.py  pyproject.toml  run_server.sh  server.py  test_connection.py
mcp-servers/xnai-memory/: README.md  __init__.py  pyproject.toml  server.py
mcp-servers/xnai-memory/configs/: claude_desktop.json  cline_settings.json  opencode_mcp.json
projects/multi-voice-versions/voice-assistant-platform/: CLAUDE.md  README.md  pyproject.toml
projects/multi-voice-versions/voice-assistant-platform/.claude/: settings.local.json
projects/multi-voice-versions/voice-assistant-platform/docs/: ARCHITECTURE.md  IMPLEMENTATION-PLAN.md  PRODUCT-ROADMAP.md  VOICE-USER-GUIDE.md
projects/multi-voice-versions/voice-assistant-platform/research/: llm-voice-systems-research.md
projects/multi-voice-versions/voice-assistant-platform/src/: cli.py  config.py  orchestrator.py
projects/multi-voice-versions/voice-assistant-platform/src/accessibility/: accessibility_orchestrator.py
projects/multi-voice-versions/voice-assistant-platform/src/audio/: audio_processor.py
projects/multi-voice-versions/voice-assistant-platform/src/events/: voice_event_bus.py
projects/multi-voice-versions/voice-assistant-platform/src/llm/: llm_router.py
projects/multi-voice-versions/voice-assistant-platform/src/memory/: memory_manager.py
projects/multi-voice-versions/voice-assistant-platform/src/registry/: service_registry.py
projects/multi-voice-versions/voice-assistant-platform/src/stt/: stt_manager.py
projects/multi-voice-versions/voice-assistant-platform/src/tts/: tts_manager.py
projects/multi-voice-versions/voice-assistant-platform/standards/: ACCESSIBILITY-STANDARDS.md  ENGINEERING-STANDARDS.md
projects/multi-voice-versions/voice-assistant-platform/tests/: test_integration.py
projects/xnai-voice-core/: README.md  pyproject.toml
projects/xnai-voice-core/src/xnai_voice_core/: __init__.py
projects/xnai-voice-core/src/xnai_voice_core/core/: voice_interface.py
projects/xnai-voice-core/src/xnai_voice_core/stt/: stt_manager.py
projects/xnai-voice-core/src/xnai_voice_core/tts/: tts_manager.py
(+8678 files in other folders)
