[tool.hatch.build.targets.wheel]
packages = ["app/XNAi_rag_app"]
[project]
name = "Xoe-NovAi"
version = "0.1.0-alpha"
description = "Enterprise AI RAG stack with voice interfaces and production reliability"
authors = [
    {name = "Xoe-NovAi Team", email = "team@xoe-novai.com"}
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"



dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "faiss-cpu>=1.8.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.3.0",
    "rank-bm25>=0.2.0",
    "anyio>=4.0.0",
    "pycircuitbreaker>=1.0.0",
    "trio>=0.25.0; extra == 'trio'",
    "griffe>=0.36.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-prometheus>=1.0.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-distro>=0.41b0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "prometheus-client>=0.18.0",
    "psutil>=5.9.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.80.0",
    "fakeredis>=2.0.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
