# ============================================================================
# Project Metadata
# ============================================================================

[project]
name = "Xoe-NovAi"
version = "0.2.0"
description = "Sovereign AI RAG stack with voice interfaces and production reliability"
authors = [
    {name = "Xoe-NovAi Team", email = "team@xoe-novai.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/arcana-novai/xnai-foundation"
Documentation = "https://arcana-novai.github.io/xnai-foundation"
Repository = "https://github.com/arcana-novai/xnai-foundation"

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.7.0"]

# ============================================================================
# Dependencies
# ============================================================================

dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "faiss-cpu>=1.8.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.3.0",
    "rank-bm25>=0.2.0",
    "anyio>=4.0.0",
    "pycircuitbreaker>=1.0.0",
    "trio>=0.25.0; extra == 'trio'",
    "griffe>=0.36.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-prometheus>=1.0.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-distro>=0.41b0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "prometheus-client>=0.18.0",
    "psutil>=5.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.80.0",
    "fakeredis>=2.0.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "mypy>=1.8.0",
    "langgraph==1.0.8",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-prebuilt>=1.0.7",
    "python-semantic-release>=9.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

# ============================================================================
# Build Configuration
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["app/XNAi_rag_app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# Ruff Configuration
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 127

exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site",
    "scripts/_archive",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "C901",   # too complex
    "ARG001", # unused function argument (common in FastAPI)
    "ARG002", # unused method argument
    "SIM108", # use ternary operator
    "ERA001", # commented-out code
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["XNAi_rag_app"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "S101"]

# ============================================================================
# MyPy Configuration
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_error_summary = true
pretty = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "redis.*",
    "qdrant_client.*",
    "whisper.*",
    "piper.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ============================================================================
# Semantic Release Configuration
# ============================================================================

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "app/XNAi_rag_app/__init__.py:__version__",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- VERSION HISTORY -->"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^chore\\(deps\\):",
    "^docs:",
    "^style:",
    "^refactor:",
    "^test:",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
