[tool.poetry]
name = "omega-stack"
version = "4.6.0"
description = "Xoe-NovAi Foundation Stack (Sovereign Edition)"
authors = ["Archon <archon@xoe-novai.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
anyio = "^4.3.0"
pydantic = "^2.6.0"
qdrant-client = "^1.7.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.2.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
