[project]
name = "xnai-memory-bank-mcp"
version = "1.0.0"
description = "Sovereign Memory Bank MCP Server for Omega Stack"
authors = [
    { name = "Xoe-NovAi Foundation", email = "arcana-novai@proton.me" }
]
dependencies = [
    "anyio>=4.12.1",
    "mcp>=0.1.0",
    "redis>=7.1.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "aiofiles>=23.1.0",
    "cryptography>=41.0.0"
]
requires-python = ">=3.10"

[project.scripts]
xnai-memory-bank = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
