[project]
name = "xnai-memory-mcp"
version = "0.1.0"
description = "MCP server for XNAi Memory Bank - MemGPT-style hierarchical memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
xnai-memory = "mcp_servers.xnai_memory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
