[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voiceos"
version = "0.1.0"
description = "Voice-first AI platform for blind and sighted developers"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Audio I/O
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "scipy>=1.11",

    # Async HTTP
    "httpx>=0.27",

    # LLM
    "anthropic>=0.34",

    # Config
    "pyyaml>=6.0",
    "pydantic>=2.0",

    # Logging
    "structlog>=24.0",

    # CLI
    "click>=8.1",
]

[project.optional-dependencies]
# macOS accessibility (requires macOS)
macos = [
    "pyobjc-framework-Accessibility>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-AVFoundation>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]

# Wake word detection
wakeword = [
    "openwakeword>=0.6",
]

# Development tools
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
voiceos = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
